# hotfix-py

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
examples/: simple_new_order.py
hotfix/: README.md  __init__.py  data_dictionary.py  protocol.py
hotfix-core/: .gitignore  Cargo.toml  hotfix_core.pyi  pyproject.toml
hotfix-core/src/: lib.rs  message.rs  repeating_group.rs  session.rs
