[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotfix"
version = "0.1.0"
description = "Python bindings for the HotFIX FIX protocol engine"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "hotfix-core",  # The Rust extension module
]
authors = [
    {name = "David Steiner"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
]
keywords = ["fix", "trading", "finance", "protocol"]

[project.urls]
Homepage = "https://github.com/davidsteiner/hotfix"
Repository = "https://github.com/davidsteiner/hotfix"

[tool.setuptools]
packages = ["hotfix"]
package-data = {"hotfix" = ["py.typed"]}

[tool.pyright]
include = ["hotfix"]
strict = ["hotfix"]
typeCheckingMode = "strict"
