[package]
name = "hotfix-py"
version = "0.1.0"
edition = "2024"

[lib]
name = "hotfix_core"
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.89"
pyo3 = "0.27.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
hotfix-message = { git = "https://github.com/davidsteiner/hotfix", branch = "convenience-changes-for-messages", features = ["utils-chrono"] }
hotfix = { git = "https://github.com/davidsteiner/hotfix", branch = "convenience-changes-for-messages" }
